--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,16 @@ body{
 
 div{
   margin: 0 auto;
+  display: block;
+}
+
+h2, h4{
+  display: block;
+}
+
+.container{
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* Header */
@@ -32,4 +42,17 @@ nav.a{
 #logo{
   padding-left: 10px;
   height: 50px;
+}
+
+/* Mission */
+#mission{
+  height: 700px;
+  width: 1200px;
+  background-image: url("../images/background.jpg");
+  align-items: center;
+}
+
+#missionbox{
+  width: 100%;
+  background-color: black;
 }
